completed base painting

--- a/src/assets/index.template.html
+++ b/src/assets/index.template.html
@@ -4,15 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Haplotype Visualization Browser developed at University of Saskatchewan">
+    <meta name="description"
+        content="Visualization comparing the mRNA sequences of Moderna and Pfizer vaccine, developed at University of Saskatchewan">
     <meta name="author" content="kiranbandi">
-    <title>Moderna Pfizer Mapping</title>
+    <title>Moderna Pfizer mRNA/Protein Mapping</title>
     <!--font used by bootstrap theme-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
 </head>
 
 <body>
-    <div id="haplotype-map"></div>
+    <div id="chart-mount"></div>
     <!-- Loading webpack code bundle here -->
 </body>
 
