updated with chart labels

--- a/src/assets/index.template.html
+++ b/src/assets/index.template.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Visualization comparing the mRNA sequences of Moderna and Pfizer vaccine, developed at University of Saskatchewan">
     <meta name="author" content="kiranbandi">
-    <title>Moderna Pfizer mRNA/Protein Mapping</title>
+    <title>Moderna Pfizer mRNA Mapping</title>
     <!--font used by bootstrap theme-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
 </head>
